fixed text in ".stage-text p" from bleeding into one another

--- a/css/fish.css
+++ b/css/fish.css
@@ -209,7 +209,8 @@ a:hover {
 }
 
 .stage-text p {
-    width: 65ch;
+    width: 90%;
+    margin: auto;
 }
 
 .stage-text a {
